--- a/app/src/main/res/menu/st_prof.xml
+++ b/app/src/main/res/menu/st_prof.xml
@@ -2,13 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/action_setting"
         android:icon="@drawable/alarmw"
         android:title="@string/action_settings"
         app:showAsAction="ifRoom"
         />
     <item
         android:id="@+id/action_settings"
-        android:icon="@drawable/alarmw"
         android:title="@string/action_settings"
         app:actionViewClass="android.widget.TextView"
         app:showAsAction="ifRoom" />
