--- a/app/src/main/res/layout/notification_one.xml
+++ b/app/src/main/res/layout/notification_one.xml
@@ -1,18 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+    <!-- activity_main.xml -->
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="horizontal" >
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".fragment.NotificationOne">
 
-    <ListView
-        android:id="@+id/notification"
-        android:layout_width="307dp"
-        android:layout_height="match_parent" />
-
-    <ListView
-        android:id="@+id/notificationTime"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:clipToPadding="false"
+        android:overScrollMode="never" />
+</FrameLayout>
 
-</LinearLayout>
+
+<!--<?xml version="1.0" encoding="utf-8"?>-->
+<!--<LinearLayout-->
+    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--android:layout_width="fill_parent"-->
+    <!--android:layout_height="fill_parent"-->
+    <!--android:orientation="horizontal" >-->
+
+    <!--<ListView-->
+        <!--android:id="@+id/notification"-->
+        <!--android:layout_width="307dp"-->
+        <!--android:layout_height="match_parent" />-->
+
+    <!--<ListView-->
+        <!--android:id="@+id/notificationTime"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent" />-->
+
+<!--</LinearLayout>-->
