--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,139 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:gravity="center_horizontal"
+    android:layout_gravity="center_vertical"
+    android:addStatesFromChildren="false"
+    android:alwaysDrawnWithCache="false"
+    android:background="@mipmap/icons"
     android:orientation="vertical"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".LoginActivity">
 
-    <!-- Login progress -->
-
-    <ProgressBar
-        android:id="@+id/login_progress"
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:visibility="gone" />
-
-    <TextView
-        android:id="@+id/textView11"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:lineSpacingExtra="18sp"
-        android:paddingBottom="10dp"
-        android:text="@string/bari"
-        android:textAllCaps="false"
-        android:textColor="@color/colorAccent"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        app:fontFamily="casual" />
+        android:layout_height="match_parent"
+        android:background="@color/colorLogo"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textView22"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/mutq"
-        android:textColor="@android:color/background_dark"
-        android:textSize="18sp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/textView23"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="50dp"
-        android:text="Մուտքագրե՛ք Ձեր լոգինը և ծածկագիրը" />
-
-    <ScrollView
-        android:id="@+id/login_form"
-        android:layout_width="match_parent"
-        android:layout_height="250dp">
+        <ImageView
+            android:layout_width="101dp"
+            android:layout_height="26dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginBottom="10dp"
+            android:src="@mipmap/logo" />
 
         <LinearLayout
-            android:id="@+id/email_login_form"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:gravity="center_vertical|center_horizontal|center"
             android:orientation="vertical">
 
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="270dp"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical|center_horizontal|center"
+                android:background="@drawable/background_login_and_password"
+                android:orientation="vertical">
 
                 <EditText
                     android:id="@+id/textUserName"
-                    android:layout_width="match_parent"
+                    android:layout_width="265dp"
                     android:layout_height="wrap_content"
-                    android:fontFamily="casual"
-                    android:hint="@string/prompt_username"
-                    android:inputType="textEmailAddress"
-                    android:maxLines="1"
-                    android:singleLine="true"
-                    android:textStyle="bold" />
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginRight="8dp"
+                    android:drawablePadding="10dp"
+                    android:elevation="4dp"
+                    android:gravity="center_horizontal"
+                    android:hint="մուտքանուն"
+                    android:padding="15dp"
+                    android:textColor="@color/white"
+                    android:textColorHighlight="@color/white"
+                    android:textColorHint="@color/white" />
 
-            </android.support.design.widget.TextInputLayout>
-
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
 
                 <EditText
                     android:id="@+id/textPassword"
-                    android:layout_width="match_parent"
+                    android:layout_width="265dp"
                     android:layout_height="wrap_content"
-                    android:fontFamily="casual"
-                    android:hint="@string/prompt_password"
-                    android:imeActionId="6"
-                    android:imeActionLabel="@string/action_sign_in_short"
-                    android:imeOptions="actionUnspecified"
-                    android:inputType="textPassword"
-                    android:maxLines="1"
-                    android:singleLine="true"
-                    android:textStyle="bold" />
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginRight="8dp"
+                    android:drawablePadding="10dp"
+                    android:gravity="center_horizontal"
+                    android:hint="ծածկագիր"
+                    android:padding="15dp"
+                    android:textColor="@color/white"
+                    android:textColorHighlight="@color/white"
+                    android:textColorHint="@color/white"
+                    android:typeface="monospace" />
 
-            </android.support.design.widget.TextInputLayout>
 
-            <Button
-                android:id="@+id/btnLogin"
-                style="?android:textAppearanceSmall"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:background="@color/colorAccent"
-                android:fontFamily="casual"
-                android:text="@string/action_sign_in"
-                android:textColor="@android:color/background_light"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                <Button
+                    android:id="@+id/btnLogin"
+                    android:layout_width="140dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="0dp"
+                    android:layout_marginBottom="10dp"
+                    android:padding="15dp"
+                    android:shadowColor="@android:color/transparent"
+                    android:background="@drawable/background_login_button"
+                    android:text="@string/action_sign_in"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    android:typeface="monospace" />
 
+            </LinearLayout>
         </LinearLayout>
-    </ScrollView>
-
-    <Button
-        android:id="@+id/web"
-        android:layout_width="231dp"
-        android:layout_height="35dp"
-        android:background="@color/colorAccent"
-        android:text="http://www.profitdeco.com"
-        android:textColor="@android:color/background_light"
-        android:textSize="14sp"
-        android:textStyle="bold" />
-
-    <Button
-        android:layout_width="231dp"
-        android:layout_height="35dp"
-        android:layout_marginTop="20dp"
-        android:background="@color/colorAccent"
-        android:onClick="notCount"
-        android:text="count"
-        android:textColor="@android:color/background_light"
-        android:textSize="14sp"
-        android:textStyle="bold" />
+    </LinearLayout>
 </LinearLayout>
