--- a/app/src/main/res/layout/notification_one.xml
+++ b/app/src/main/res/layout/notification_one.xml
@@ -1,37 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <!-- activity_main.xml -->
-<FrameLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".fragment.NotificationOne">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="horizontal" >
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView"
+    <ListView
+        android:id="@+id/notification"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:clipToPadding="false"
-        android:overScrollMode="never" />
-</FrameLayout>
-
-
-<!--<?xml version="1.0" encoding="utf-8"?>-->
-<!--<LinearLayout-->
-    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
-    <!--android:layout_width="fill_parent"-->
-    <!--android:layout_height="fill_parent"-->
-    <!--android:orientation="horizontal" >-->
-
-    <!--<ListView-->
-        <!--android:id="@+id/notification"-->
-        <!--android:layout_width="307dp"-->
-        <!--android:layout_height="match_parent" />-->
+        android:layout_height="match_parent" />
+    <!--android:layout_width="307dp"-->
 
     <!--<ListView-->
         <!--android:id="@+id/notificationTime"-->
         <!--android:layout_width="match_parent"-->
         <!--android:layout_height="match_parent" />-->
 
-<!--</LinearLayout>-->
+</LinearLayout>
