--- a/app/src/main/res/layout/notification_one.xml
+++ b/app/src/main/res/layout/notification_one.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="horizontal" >
+    android:background="@color/colorPrimaryss"
+    android:orientation="horizontal">
 
     <ListView
         android:id="@+id/notification"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_margin="5dp" />
     <!--android:layout_width="307dp"-->
 
     <!--<ListView-->
-        <!--android:id="@+id/notificationTime"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent" />-->
+    <!--android:id="@+id/notificationTime"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent" />-->
 
 </LinearLayout>
