--- a/app/src/main/res/layout/row_item.xml
+++ b/app/src/main/res/layout/row_item.xml
@@ -13,6 +13,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/background_login_and_password"
+        android:layout_margin="10dp"
         android:orientation="vertical"
         android:padding="8dp">
 
@@ -22,42 +24,14 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                tools:text="Robert Lewandowski" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
                 android:id="@+id/textNot"
-                android:layout_width="316dp"
-                android:layout_height="wrap_content"
-                tools:text="Bayern Munchen" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/times"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="end"
-                android:text="90"
-                android:textAlignment="textEnd"
+                android:background="@color/colorPrimaryss"
+                android:padding="5dp"
+                android:textColor="@android:color/background_dark"
                 android:textSize="12sp"
-                tools:text="90" />
+                tools:text="Bayern Munchen" />
 
         </LinearLayout>
 
