--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -246,22 +246,22 @@
                         <ListView
                             android:id="@+id/xumbStName"
                             android:layout_width="90dp"
-                            android:layout_height="211dp" />
+                            android:layout_height="wrap_content" />
 
                         <ListView
                             android:id="@+id/xumbStSurname"
                             android:layout_width="112dp"
-                            android:layout_height="211dp" />
+                            android:layout_height="wrap_content" />
 
                         <ListView
                             android:id="@+id/xumbStRating"
                             android:layout_width="112dp"
-                            android:layout_height="211dp" />
+                            android:layout_height="wrap_content" />
 
                         <ListView
                             android:id="@+id/xumbStImg"
                             android:layout_width="150dp"
-                            android:layout_height="211dp" />
+                            android:layout_height="wrap_content" />
                     </LinearLayout>
 
                 </LinearLayout>
