--- a/app/src/main/res/layout/nav_header_st_prof.xml
+++ b/app/src/main/res/layout/nav_header_st_prof.xml
@@ -3,85 +3,91 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
-    android:background="@color/colorAccent"
+    android:background="@mipmap/porc"
     android:gravity="bottom"
     android:orientation="vertical"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
+
+    android:theme="@style/ThemeOverlay.AppCompat.Dark">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
-
-        <com.joooonho.SelectableRoundedImageView
-            android:id="@+id/userImageA"
-            android:layout_width="123dp"
-            android:layout_height="124dp"
-            android:layout_gravity="center"
-            android:scaleType="centerCrop"
-            app:sriv_border_color="#8bc34a"
-            app:sriv_border_width="2dp"
-            app:sriv_oval="true" />
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:background="@color/colorPri"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+
+            android:background="@color/colorPrimaryss"
+            android:orientation="horizontal">
+
+            <com.joooonho.SelectableRoundedImageView
+                android:id="@+id/userImageA"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:layout_gravity="center"
+                android:scaleType="centerCrop"
+                app:sriv_border_color="#8bc34a"
+                app:sriv_border_width="2dp"
+                app:sriv_oval="true" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textView20"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1" />
+
+                    <ImageView
+                        android:id="@+id/userImages"
+                        android:layout_width="90dp"
+                        android:layout_height="61dp"
+                        android:contentDescription="@string/nav_header_desc"
+                        android:paddingTop="@dimen/nav_header_vertical_spacing"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                        app:srcCompat="@mipmap/logo" />
+                </LinearLayout>
 
                 <TextView
-                    android:id="@+id/textView20"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/nAndsA"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1" />
+                    android:fontFamily="cursive"
+                    android:gravity="center"
+                    android:textColor="@color/white"
+                    android:textSize="18sp"
+                    android:textStyle="bold|italic"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-                <ImageView
-                    android:id="@+id/userImages"
-                    android:layout_width="132dp"
-                    android:layout_height="66dp"
-                    android:contentDescription="@string/nav_header_desc"
-                    android:paddingTop="@dimen/nav_header_vertical_spacing"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                    app:srcCompat="@mipmap/logo" />
+                <TextView
+                    android:id="@+id/uRatingA"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:textColor="@android:color/background_light" />
+
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/textView19"
-                android:layout_width="match_parent"
-                android:layout_height="40dp" />
-
-            <TextView
-                android:id="@+id/nAndsA"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="cursive"
-                android:textColor="@android:color/background_light"
-                android:textSize="12sp"
-                android:textStyle="bold|italic"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/uRatingA"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="@android:color/background_light" />
         </LinearLayout>
 
-    </LinearLayout>
-
     <!--android:src="@drawable/logo"-->
-
+    </LinearLayout>
 
 </LinearLayout>
 
