--- a/app/src/main/res/menu/activity_st_prof_drawer.xml
+++ b/app/src/main/res/menu/activity_st_prof_drawer.xml
@@ -55,7 +55,7 @@
 
     </group>
 
-    <item android:title="Communicate">
+    <item android:title="">
         <menu>
             <!--<item-->
             <!--android:id="@+id/nav_share"-->
