--- a/app/src/main/res/layout/fragment_tesakan.xml
+++ b/app/src/main/res/layout/fragment_tesakan.xml
@@ -45,6 +45,44 @@
                     android:indeterminate="true"
                     android:indeterminateBehavior="cycle"
                     android:visibility="gone" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/textView11"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:layout_weight="1"
+                        android:text="ՏԵՍԱԿԱՆ ՆՅՈՒԹԵՐ "
+                        android:textColor="@android:color/background_dark"
+                        android:textSize="24sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/textView24"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginTop="15dp"
+                        android:layout_marginBottom="8dp"
+                        android:layout_weight="1"
+                        android:text="@string/modul"
+                        android:textColor="@android:color/background_dark"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+
+                    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
+                        android:id="@+id/tesakan"
+                        android:layout_width="148dp"
+                        android:layout_height="45dp"
+                        android:layout_marginLeft="8dp"
+                        android:layout_weight="1"
+                        android:hint="" />
+                </LinearLayout>
 
 
             </LinearLayout>
