--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -66,6 +66,8 @@
                     android:drawablePadding="10dp"
                     android:gravity="center_horizontal"
                     android:hint="ծածկագիր"
+                    android:inputType="textPassword"
+
                     android:padding="15dp"
                     android:textColor="@color/white"
                     android:textColorHighlight="@color/white"
