--- a/app/src/main/res/layout/theory_item.xml
+++ b/app/src/main/res/layout/theory_item.xml
@@ -2,10 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".fragment.TesakanFragment">
-
+    android:layout_width="250px"
+    android:layout_height="match_parent">
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
@@ -30,7 +28,7 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -41,27 +39,27 @@
                     android:id="@+id/myProgressBar"
                     style="?android:attr/progressBarStyleHorizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:indeterminate="true"
                     android:indeterminateBehavior="cycle"
                     android:visibility="gone" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="500dp"
                     android:layout_weight="1"
                     android:orientation="vertical">
 
-                    <TextView
-                        android:id="@+id/textView11"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
-                        android:layout_weight="1"
-                        android:text="ՏԵՍԱԿԱՆ ՆՅՈՒԹԵՐ "
-                        android:textColor="@android:color/background_dark"
-                        android:textSize="24sp"
-                        android:textStyle="bold" />
+                    <!--<TextView-->
+                    <!--android:id="@+id/textView11"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_margin="10dp"-->
+                    <!--android:layout_weight="1"-->
+                    <!--android:text="ՏԵՍԱԿԱՆ ՆՅՈՒԹԵՐ "-->
+                    <!--android:textColor="@android:color/background_dark"-->
+                    <!--android:textSize="24sp"-->
+                    <!--android:textStyle="bold" />-->
 
                     <TextView
                         android:id="@+id/textView24"
@@ -77,10 +75,18 @@
                         android:textStyle="bold" />
 
                     <ListView
-                        android:id="@+id/theory"
+                        android:id="@+id/tesakanner"
                         android:layout_width="match_parent"
-                        android:layout_height="500dp"
+                        android:layout_height="match_parent"
                         android:layout_margin="5dp" />
+
+                    <!--<com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner-->
+                    <!--android:id="@+id/tesakan"-->
+                    <!--android:layout_width="148dp"-->
+                    <!--android:layout_height="45dp"-->
+                    <!--android:layout_marginLeft="8dp"-->
+                    <!--android:layout_weight="1"-->
+                    <!--android:hint="" />-->
                 </LinearLayout>
 
 
