--- a/app/src/main/res/menu/activity_st_prof_drawer.xml
+++ b/app/src/main/res/menu/activity_st_prof_drawer.xml
@@ -52,6 +52,10 @@
             android:id="@+id/tesakanNyut"
             android:icon="@drawable/ic_library"
             android:title="Տեսական նյութ" />
+        <item
+            android:id="@+id/tesakanNyutPorc"
+            android:icon="@drawable/ic_library"
+            android:title="Տեսական նյութ փ." />
 
     </group>
 
