--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,7 @@
     <color name="colorLogo">#85211e20</color>
     <color name="white">#ffffff</color>
     <color name="signupColor">#066e8a</color>
+    <color name="colorGlx">#a68c41e8</color>
+    <color name="colorEx">#cab734</color>
 
 </resources>
