--- a/app/src/main/res/layout/fragment_tesakan.xml
+++ b/app/src/main/res/layout/fragment_tesakan.xml
@@ -214,7 +214,7 @@
                         android:textStyle="bold" />
 
                     <Button
-                        android:id="@+id/node.js"
+                        android:id="@+id/nodeJs"
                         android:layout_width="wrap_content"
                         android:layout_height="100dp"
                         android:layout_margin="3dp"
