--- a/app/src/main/res/layout/fragment_tesakan.xml
+++ b/app/src/main/res/layout/fragment_tesakan.xml
@@ -366,6 +366,34 @@
                 </TableRow>
 
             </TableLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView13"
+                    android:layout_width="69dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
+
+                <TextView
+                    android:id="@+id/textView15"
+                    android:layout_width="216dp"
+                    android:layout_height="48dp"
+                    android:text="@string/arm"
+                    android:textAllCaps="false"
+                    android:textColor="@android:color/background_dark"
+                    android:textSize="8sp"
+                    android:textStyle="italic"
+                    android:typeface="monospace" />
+
+                <TextView
+                    android:id="@+id/textView16"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
+            </LinearLayout>
 
         </LinearLayout>
     </ScrollView>
