--- a/app/src/main/res/layout/fragment_tesakan_home.xml
+++ b/app/src/main/res/layout/fragment_tesakan_home.xml
@@ -16,19 +16,19 @@
             android:layout_height="wrap_content"
             android:orientation="vertical" >
 
-            <TextView
-                android:id="@+id/textJson"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+            <!--<TextView-->
+                <!--android:id="@+id/textJson"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--app:layout_constraintBottom_toBottomOf="parent"-->
+                <!--app:layout_constraintLeft_toLeftOf="parent"-->
+                <!--app:layout_constraintRight_toRightOf="parent"-->
+                <!--app:layout_constraintTop_toTopOf="parent" />-->
 
             <ListView
                 android:id="@+id/harcerList"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="500dp" />
         </LinearLayout>
     </ScrollView>
 
