--- a/app/src/main/res/layout/row_items.xml
+++ b/app/src/main/res/layout/row_items.xml
@@ -18,6 +18,8 @@
     android:id="@android:id/text1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="10dp"
+    android:background="@drawable/background_harc_list"
     android:gravity="center_vertical"
     android:minHeight="?android:attr/listPreferredItemHeightSmall"
     android:paddingStart="?android:attr/listPreferredItemPaddingStart"
@@ -25,4 +27,6 @@
     android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
     android:paddingRight="?android:attr/listPreferredItemPaddingRight"
     android:textAppearance="?android:attr/textAppearanceListItemSmall"
-    android:textSize="10sp" />
+    android:textColor="@android:color/background_dark"
+    android:textSize="12sp"
+    android:textStyle="bold" />
